--- a/core/photo-store/src/main/res/xml/file_paths.xml
+++ b/core/photo-store/src/main/res/xml/file_paths.xml
@@ -3,4 +3,7 @@
     <files-path
         name="saved_images"
         path="/images"/>
+    <cache-path
+        name="temp_images"
+        path="/temp_images"/>
 </paths>
